--- a/Midterm/midterm.Rmd
+++ b/Midterm/midterm.Rmd
@@ -1,9 +1,15 @@
 ---
-title: "midterm"
+title: "JSC370 Midterm Report"
 output: html_document
 author: "Elaine Dai"
 date: "2024-03-10"
 ---
+
+```{css, echo=FALSE}
+h1.title, .author, h4.date {
+  text-align: center;
+}
+```
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -11,76 +17,250 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Introduction
 
-In the rapidly evolving job market, the role of a Data Analyst has emerged as a pivotal position within companies.
+In the rapidly evolving job market, the role of a data science related job has emerged as a pivotal position within companies. As a student approaching the completion of data science degree, I am preparing to step into the professional world, and get interested in understanding the landscape of data science related positions. Therefore, this project aims to dig into the characteristics of data analyst related job postings, with a specific focus on uncovering the markers that signal high-salary opportunities. By digging into this, we can gain insights into the attributes and qualifications that employers value most for.
+
+This project seeks to answer the question: "What characteristics of data science related job postings are indicative of high-salary positions?". The dataset utilized in this analysis was acquired from Kaggle, specifically from the "LinkedIn Job Postings" dataset by user Arsh Kon [here](https://www.kaggle.com/datasets/arshkon/linkedin-job-postings/data). This dataset comprises a wide range of United States job postings on LinkedIn in 2023, including various fields such as job title, company, location, salary, and more.
+
+Some columns that are deemed relevant to the topic are:
+
+- job_id: Job ID as defined by LinkedIn
+
+- company_id: Company ID as Defined by LinkedIn
+
+- title: Job Title
+
+- description: Job Description
+
+- max_salary: Maximum Salary
+
+- med_salary: Median Salary
+
+- min_salary: Minimum Salary
+
+- pay_period: Pay Period
+
+- formatted_work_type: Work Type
+
+- location: Job Location
+
+- formatted_experience_level: Experience Level Required
 
 
 # Methods
 
-The dataset utilized in this analysis was acquired from Kaggle, specifically from the "LinkedIn Job Postings" dataset by user Arsh Kon [here ](https://www.kaggle.com/datasets/arshkon/linkedin-job-postings/data). This dataset comprises a wide range of United States job postings on LinkedIn in 2023, including various fields such as job title, company, location, salary, and more.
-
-Some columns that are deemed relevant to the topic are:
-- job_id: Job ID as defined by LinkedIn
-- company_id
-- title:
-- description:
-- max_salary:
-- med_salary:
-- min_salary:
-- pay_period:
-- formatted_work_type:
-- location:
-- formatted_experience_level:
-
-#Preliminary Results
-
+First I loaded libraries and the data set.
 
 ```{r warning=FALSE, message=FALSE}
 library(dplyr)
 library(tidyverse)
 library(ggplot2)
+library(kableExtra)
+library(gridExtra)
+library(wordcloud)
+library(tidytext)
+library(tm)
 ```
 
 ```{r}
 jobs <- read.csv("job_postings.csv")
 ```
 
+##### data cleaning and wrangling
 
-Upon acquiring the dataset, I first examined the structure of the data: the types of each column and any missing values. The target attribute is the salary, so this preliminary examination is focused mainly on salary. The examination revealed that salary information was provided either in a range format (minimum and maximum salary) or a median value (med_salary), and not all entries had a valid salary. To address this, a new column, salary, was created by averaging the min_salary and max_salary values for each entry where med_salary was missing. Another modification involved multiplying 2087(the average number of work hours in a year) to the hourly based salary, in order to convert salary information from an hourly to a yearly basis for those entries listed with hourly rates.
+Upon acquiring the dataset, I examined the structure of the data: the types of each column and any missing values. The target attribute is the salary, so this preliminary examination is focused mainly on salary. The examination revealed that salary information was provided either in a range format (minimum and maximum salary) or a median value (med_salary), and not all entries had a valid salary. To address this, a new column, salary, was created by averaging the min_salary and max_salary values for each entry where med_salary was missing. 2087(the average number of work hours in a year) is multiplied to the hourly based salary, in order to convert salary information from an hourly to a yearly basis for those entries listed with hourly rates. Another modification involved extracting the state information from the column location, for future analysis.
 
-The furthur cleaning entailed filtering the dataset to retain only those job postings that are directly related to data roles. This was achieved by keeping rows where the job title included the term "data". And the final stage is removing all job postings with na value and  selecting specific columns that were deemed relevant for the analysis.
+The further cleaning entailed filtering the dataset to retain only those job postings that are directly related to data roles. This was achieved by keeping rows where the job title included the term "data". After examining the summary statistics for salary, 4 outliers with unreasonably low annual salary have been removed. And the final stage is removing all job postings with na value and selecting specific columns that were deemed relevant for the analysis.
 
 
-
-```{r echo=FALSE, results='hide'}
+```{r include=FALSE}
 colSums(is.na(jobs))
 ```
 
 ```{r}
-cleaned_jobs <- jobs |>
+cleaned_data <- jobs |>
   mutate(salary = ifelse(is.na(med_salary), (max_salary + min_salary) / 2, med_salary)) |>
   filter(!is.na(salary)) |>
   filter(str_detect(title, regex("data", ignore_case = TRUE))) |>
   mutate(salary = ifelse(pay_period == "HOURLY", salary * 2087, salary)) |>
-  select(job_id, company_id, title, description, salary, pay_period, formatted_work_type, location, formatted_experience_level)
-```
+  filter(salary > 200) |>
+  mutate(state = ifelse(str_detect(location, ","), # Check if there's a comma
+                         str_trim(str_extract(location, "[^,]+$")), # Extract everything after the last comma
+                         location)) |>
+  mutate(state = ifelse(nchar(state) > 2, "Other", state)) |>
+  mutate(formatted_experience_level = ifelse(nchar(formatted_experience_level) < 2, "Other", formatted_experience_level)) |>
+  select(title, salary, formatted_work_type, state, formatted_experience_level, description) |>
+  arrange(salary)
 
-```{r}
-colSums(is.na(cleaned_jobs))
-cleaned_jobs
-```
-
-
-
-
-
-```{r}
-df |> summarise(n = n())
-colSums(is.na(df))
+cleaned_data$formatted_work_type <- factor(cleaned_data$formatted_work_type)
+cleaned_data$formatted_experience_level <- factor(cleaned_data$formatted_experience_level)
+cleaned_data$state <- factor(cleaned_data$state)
 ```
 
 
-```{r}
-df %>% filter()
+```{r include=FALSE}
+colSums(is.na(cleaned_data))
+cleaned_data
+```
+
+##### summary statistics: salary
+
+I extracted the summary statistics for salary and formulated the table using the kable.
+To further explore the categorical variables within the dataset, I implemented a visualization function using the ggplot2 library. The function was designed to produce two types of visual representations for each categorical variable: a bar plot and a box plot.
+
+
+##### exploratory graphs: word type, state, experience level
+
+The function first groups the data by the categorical variable provided, summarises the data to get counts of each category within the variable, and then creates a barplot using ggplot2 with categories on the y-axis (due to coord_flip()) and their respective counts on the x-axis. Then a boxplot is created with the categorical variable on the y-axis (again, due to coord_flip()) and salary on the x-axis. The boxes are colored based on the categorical variable to differentiate between categories visually.
+
+##### text mining: description
+
+Finally, an additional analysis was incorporated by utilizing text mining techniques to dissect job descriptions. The tidytext package was used to tokenize the text, allowing for the identification and visualization of the most frequent tokens. Common stopwords were removed, including universally frequent English words and additional terms like "years", "will", "work", "job" and "role".etc which are expected to be recurrent in job descriptions but offer little analytical value. Additionally, any tokens containing numbers were filtered out to focus purely on textual data. The text data was then tokenized into bigrams and trigrams to facilitate a granular analysis of phrase patterns within the job descriptions. Word/phrase count bar plots and a word cloud were created for visualization.
+
+
+# Preliminary Results
+
+
+After cleaning and wrangling, the cleaned dataset contains 297 observations and 6 variables with no missing values. The summary statistics for the numeric variable salary and the exploratory plots are given below.
+
+```{r echo=FALSE}
+# Generate summary statistics for salary
+salary_summary <- cleaned_data |>
+  summarise(mean = mean(salary), 
+            median = median(salary),
+            sd = sd(salary),
+            min = min(salary),
+            max = max(salary))
+
+salary_summary_tidy <- pivot_longer(salary_summary, cols = everything(), names_to = "Statistic", values_to = "Value")
+
+kable(salary_summary_tidy, "html", position = "right") |>
+  kable_styling("striped", full_width = FALSE)
+```
+
+
+
+
+```{r echo=FALSE}
+plot_data <- function(data, cat_var) {
+  count_plot <- data |>
+    group_by(!!sym(cat_var)) |>
+    summarise(Count = n()) |>
+    ggplot(aes(x = reorder(!!sym(cat_var), -Count), y = Count)) +
+    geom_bar(stat = "identity", fill = "#87CEEB", colour = "#00BFFF") +
+    theme_minimal() +
+    labs(title = paste("Count by", cat_var), x = cat_var, y = "Count") +
+    coord_flip()
+  
+  
+  # Boxplot for salary per group
+  salary_plot <- data |>
+    ggplot(aes(x = !!sym(cat_var), y = salary, fill = !!sym(cat_var))) +
+    geom_boxplot() +
+    theme_minimal() +
+    labs(title = paste("Salary Distribution by", cat_var), x = cat_var, y = "salary") +
+    theme(legend.position = "none") +
+    coord_flip()
+  
+  grid.arrange(count_plot, salary_plot, nrow = 1)
+}
+```
+
+In the work type category, full-time positions dominate the job market. Internships, part-time and temporary jobs are very less frequent. Salary-wise, full-time positions also lead with higher pay. Contract roles offer lower median salaries than full-time positions but are still well above temporary, part-time, and internship categories, which present the lowest pay. This is a predictable trend.
+
+```{r echo=FALSE}
+plot_data(cleaned_data, "formatted_work_type")
+```
+
+Regarding experience levels, mid-senior jobs are the most abundant, entry-level positions and associate follow in frequency. However, the high-ranking executive and director positions are rare, which reflects their specialized and leadership-focused nature. 
+
+Salaries increase notably with experience. Top-tier roles like executives enjoy the highest salaries, and understandably, those at the entry-level earn the least. This gradient in pay is expected, aligning with the increased responsibilities and expertise required at higher levels.
+
+```{r echo=FALSE}
+plot_data(cleaned_data, "formatted_experience_level")
+```
+
+A state-wise look at job counts places California at the front, suggesting a bustling job market.  New York and Texas also show significant job availability. Salaries by state reveal disparities that could be influenced by living costs or industry concentration, with places like California and New York showing higher median salaries. Other states exhibit a broad range of salaries, pointing to diverse economic landscapes and job sectors within each state.
+
+```{r echo=FALSE}
+plot_data(cleaned_data, "state")
+```
+
+
+
+This bar graph displays the most frequently occurring individual words within job descriptions. The words with highest frequencies includes "data", "experience", "business", "team", "skills", highlighting the general importance of these aspects in the professional environment.
+
+
+```{r echo=FALSE}
+stopwords2 <- c(stopwords("english"), "years", "will", "work", "job", "role", "position", "including")
+
+tokens <- cleaned_data |>
+  select(description) |>
+  unnest_tokens(word, description) |>
+  filter(!word %in% stopwords2) |>
+  filter(!grepl("[[:digit:]]+", word)) |>
+  count(word, sort = TRUE)
+
+tokens |>
+  slice_max(order_by = n, n = 20) |>
+  ggplot(aes(reorder(word, n), y = n)) +
+  labs(y = "Count", x = "Word") +
+  geom_bar(stat = "identity", fill = "#87CEEB", colour = "#00BFFF") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+  coord_flip()
+
+wordcloud(tokens$word, tokens$n, max.words = 100)
+
+```
+
+
+
+```{r echo=FALSE}
+sw_start <- paste0("^", paste(stopwords2, collapse=" |^"), "$")
+sw_end <- paste0("", paste(stopwords2, collapse="$| "), "$")
+
+tokens_bigram <- cleaned_data |>
+  select(description) |>
+  unnest_tokens(ngram, description, token = "ngrams", n = 2) |>
+  filter(!grepl(sw_start, ngram, ignore.case = TRUE))|>
+  filter(!grepl(sw_end, ngram, ignore.case = TRUE))|>
+  filter(!grepl("[[:digit:]]+", ngram))|>
+  count(ngram, sort = TRUE)
+
+tokens_trigram <- cleaned_data |>
+  select(description) |>
+  unnest_tokens(ngram, description, token = "ngrams", n = 3) |>
+  filter(!grepl(sw_start, ngram, ignore.case = TRUE))|>
+  filter(!grepl(sw_end, ngram, ignore.case = TRUE))|>
+  filter(!grepl("^[[:digit:]]+|[[:digit:]]$", ngram))|>
+  count(ngram, sort = TRUE)
+```
+
+
+
+The bigram (two-word phrase) frequency graph sheds light on common pairings such as "machine learning", "base salary", "computer science" and "problem solving". These reflect specific skills, compensation expectations, and competencies valued in the job market. The relatively even distribution suggests no overwhelming focus on a particular phrase but instead a variety of important attributes and benefits. Noticeably gender and equality concepts are brought up frequently, indicating the significant emphasis on diversity and inclusion within the job market.
+
+
+```{r echo=FALSE}
+tokens_bigram |>
+  slice_max(order_by = n, n = 20) |>
+  ggplot(aes(reorder(ngram, n), y = n)) +
+  labs(y = "Count", x = "Bigram") +
+  geom_bar(stat = "identity", fill = "#87CEEB", colour = "#00BFFF") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+  coord_flip()
+```
+
+The trigram (three-word phrase) bar graph reveals frequent phrases with a more contextual understanding, such as 'equal opportunity employer', which denotes a commitment to workplace equality. The prevalence of phrases like 'race color religion', and 'gender identity' points to a focus on diversity and inclusion in hiring practices.
+
+
+```{r echo=FALSE}
+tokens_trigram |>
+  slice_max(order_by = n, n = 20) |>
+  ggplot(aes(reorder(ngram, n), y = n)) +
+  labs(y = "Count", x = "Trigram") +
+  geom_bar(stat = "identity", fill = "#87CEEB", colour = "#00BFFF") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))+
+  coord_flip()
 ```
 
 
@@ -89,9 +269,10 @@ df %>% filter()
 
 
 
+# Summary
 
 
-
+This project aimed to discover which aspects of data science job postings correlate with higher salaries. The exploration of work type, location, and experience level revealed distinct variations in average salaries across different groups. Full-time positions, certain states, and advanced experience levels generally command higher pay. Natural Language Processing (NLP) applied to job descriptions also helped by identifying frequent keywords, bigrams, and trigrams. Dominant terms like 'data', 'experience', and 'business', along with phrases emphasizing 'machine learning' and 'problem-solving', were prominent. Additionally, gender, race and equality concepts were recurrent terms, signifying an ethical emphasis on hiring.
 
 
 
